# ECF-GeneticAlgorithmInspiredByQuantumMechanics

./: .gitignore  CMakeLists.txt  FunctionMinEvalOp.cpp  FunctionMinEvalOp.h  QIGA.cpp  QIGA.h  QuantumLookupTable.cpp  QuantumLookupTable.h  QuantumRegister.cpp  QuantumRegister.h  QuantumRotationGate.cpp  QuantumRotationGate.h  README.md  Teorija.md  main.cpp  parameters.txt  parametersClassical.txt  parametersQuantum.txt
Algorithms/: GAIQM.cpp  GAIQM.h  QIGA.cpp  QIGA.h
Docs/: QIGA_example.docx  literatura.bib  zavrsni.aux  zavrsni.tex  zavrsni.toc
Docs/Old/: .ZavršniRad.tex.swp  ZavršniRad.aux  ZavršniRad.blg  ZavršniRad.tex  ZavršniRad.toc
Docs/images/: izvori
Operators/: MutQuantumInversion.cpp  MutQuantumInversion.h  MutQuantumSwap.cpp  MutQuantumSwap.h  QuantumRotationGate.cpp  QuantumRotationGate.h
Problems/: FunctionMinEvalOp.cpp  KnapsackEvalOp.cpp  KnapsackEvalOp.h  KnapsackTest1.sh  KnapsackTest1.txt  parametersFMinClassical.txt  parametersFMinQuantum.txt  parametersKnapsack.txt  parametersKnapsackClassical.txt  parametersKnapsackQuantum.txt
Problems/FunctionMin/: FunctionMinEvalOp.cpp  FunctionMinEvalOp.h  parametersClassical.txt  parametersQuantum.txt
Problems/Knapsack/: KnapsackEvalOp.cpp  KnapsackEvalOp.h  KnapsackTest100  KnapsackTest1000  KnapsackTest2  KnapsackTest250  KnapsackTest3  KnapsackTest500  KnapsackTestMedium  parametersClassical.txt  parametersQuantum.txt  parametersQuantumBS.txt
Problems/NeuralNetwork/: NNErrorEvalOp.cpp  NNErrorEvalOp.h  NeuralNetwork.cpp  NeuralNetwork.h  parametersClassical.txt  parametersQuantum.txt
Problems/NeuralNetwork/ActivationFunctions/: AbstractActivationFunction.h  LinearFunction.cpp  LinearFunction.h  SigmoidFunction.cpp  SigmoidFunction.h  SineFunction.cpp  SineFunction.h
Problems/NeuralNetwork/Algorithms/: Backpropagation.cpp  Backpropagation.h
Problems/NeuralNetwork/Crossovers/: CrsLayer.cpp  CrsLayer.h  CrsNeuron.cpp  CrsNeuron.h  CrsNeuronUniform.cpp  CrsNeuronUniform.h
Problems/NeuralNetwork/Mutations/: MutGauss.cpp  MutGauss.h  MutNeuron.cpp  MutNeuron.h  MutNeuronN.cpp  MutNeuronN.h  MutScale.cpp  MutScale.h  MutScaleNeuron.cpp  MutScaleNeuron.h
Problems/NeuralNetwork/Testing/: data_1var.txt  data_2var.txt
TestGround/: GenerateKnapsack.c  GenerateKnapsack.cpp  compare.sh  multipleCompare.sh
UnitTests/: TestFrame.cpp  TestFrame.h  parameters.txt  run.sh
UnitTests/tests/: QIGA_simple.cpp  QRG_simple.cpp
